# TheoraPlay-CS

./: Makefile  README  TheoraPlay#.csproj  TheoraPlay#.dll.config  TheoraPlay#.sln  TheoraPlay.cs
TheoraPlay/: CMakeLists.txt
TheoraPlay/src/: theoraplay.c
licenses/: LICENSE
